--- a/deno.json
+++ b/deno.json
@@ -20,6 +20,7 @@
   "tasks": {
     "check": "deno check src/index.ts",
     "test": "deno test --allow-read --allow-env --allow-net",
-    "start": "deno run --allow-read --allow-env --allow-net --allow-sys ./src/index.ts"
+    "start": "deno run --allow-read --allow-env --allow-net --allow-sys ./src/index.ts",
+    "check-deps": "deno run -A jsr:@check/deps"
   }
 }
