build: update deno-dependency.yml
Sets cron schedule to weekly on a Friday at 02:00

--- a/.github/workflows/deno-dependency.yml
+++ b/.github/workflows/deno-dependency.yml
@@ -3,7 +3,7 @@ name: deno-dependency
 on:
   workflow_dispatch:
   schedule:
-    - cron: "42 19 * * *"
+    - cron: "0 2 * * 5"
 
 jobs:
   update-dependencies:
