--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -18,7 +18,13 @@ jobs:
       pull-requests: write
     if: github.actor == 'renovate[bot]' || github.event_name == 'workflow_dispatch'
     steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_SECRET }}
       - uses: hmarr/auto-approve-action@v3
         with:
           review-message: "Auto approved automated PR"
           pull-request-number: ${{ github.event.inputs.pullRequestNumber }}
+          github-token: ${{ steps.app-token.outputs.token }}
