--- a/.github/workflows/deno-format.yml
+++ b/.github/workflows/deno-format.yml
@@ -14,8 +14,18 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_SECRET }}
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          token: ${{ steps.app-token.outputs.token }}
+          ref: ${{ github.head_ref }}
+          # Make sure the value of GITHUB_TOKEN will not be persisted in repo's config
+          persist-credentials: false
 
       - name: setup deno
         uses: denoland/setup-deno@v2
@@ -36,3 +46,4 @@ jobs:
           commit_options: '--no-verify --signoff'
           file_pattern: '*.ts'
           repository: .
+          
